css/style.css
/* ... */
.pricing-bg-shape-1 {
    position: absolute;
    left: 30%;
    top: 100px;
    z-index: -1;
}

@media (max-width: 767px) {
    .pricing-bg-shape-1 {
        display: none;
    }
}

.pricing-bg-shape-2 {
    position: absolute;
    right: 10%;
    top: 110px;
    z-index: -1;
}

@media (max-width: 767px) {
    .pricing-bg-shape-2 {
        display: none;
    }
}

.pricing-bg-shape-3 {
    position: absolute;
    bottom: 20%;
    left: 0;
    z-index: -1;
}

@media (max-width: 767px) {
    .pricing-bg-shape-3 {
        display: none;
    }
}

.newsletter {
    position: relative;
}

.newsletter-form {
    height: 85px;
    width: 100%;
    padding: 0 40px;
    border: 0;
    background: #fff;
    box-shadow: 0px 35px 46px 0px rgba(172, 189, 199, 0.28);
    border-radius: 5px;
}

.newsletter-form:focus {
    outline: 0;
    box-shadow: 0;
}

.newsletter-btn {
    position: absolute;
    height: 100%;
    background: #8986ff;
    top: 0;
    right: 0;
    border-radius: 0 5px 5px 0;
    font-weight: 700;
    font-size: 18px;
    color: #fff;
    text-transform: uppercase;
}

@media (max-width: 575px) {
    .newsletter-btn {
        padding-left: 5px;
        padding-right: 5px;
    }
}

.newsletter-bg-shape {
    position: absolute;
    top: 0;
    right: 10%;
    z-index: -1;
}

@media (max-width: 767px) {
    .newsletter-bg-shape {
        display: none;
    }
}

.footer {
    background-size: cover;
    background-position: top center;
    background-repeat: no-repeat;
}

.footer-section {
    padding-top: 500px;
    padding-bottom: 100px;
}

.footer-menu a {
    color: #091337;
    display: block;
    padding: 15px;
    font-weight: 400;
}

.social-icon li {
    margin: 0 12px;
}

.social-icon li a {
    height: 45px;
    width: 45px;
    background: #fff;
    border-radius: 5px;
    line-height: 45px;
    display: block;
    text-align: center;
}

.client-logo-slider img {
    transition: 0.2s ease;
}

.client-logo-slider a:hover img {
    -webkit-transform: scale(1.2);
    transform: scale(1.2);
}

/* service page */
.service-bg-image {
    background-size: containe;
    background-repeat: no-repeat;
    background-position: center 400px;
}

.service-bg-1 {
    position: absolute;
    left: 50px;
    top: 10%;
    z-index: -1;
}

@media (max-width: 767px) {
    .service-bg-1 {
        display: none;
    }
}

.service-bg-2 {
    position: absolute;
    right: 50px;
    top: 10%;
    z-index: -1;
}

@media (max-width: 767px) {
    .service-bg-2 {
        display: none;
    }
}

.service-bg-3 {
    position: absolute;
    right: 50px;
    top: 50%;
    z-index: -1;
}

@media (max-width: 767px) {
    .service-bg-3 {
        display: none;
    }
}

.service-bg-4 {
    position: absolute;
    left: 50px;
    bottom: 30%;
    z-index: -1;
}

@media (max-width: 767px) {
    .service-bg-4 {
        display: none;
    }
}

.service-bg-5 {
    position: absolute;
    left: 10%;
    bottom: 5%;
    z-index: -1;
}

@media (max-width: 767px) {
    .service-bg-5 {
        display: none;
    }
}

.about {
    position: relative;
    overflow: visible;
}

.about-video {
    position: relative;
}

.about-video .play-btn {
    position: absolute;
    left: 50%;
    top: 50%;
    -webkit-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
}

.about-bg-1 {
    position: absolute;
    left: 30%;
    top: 10%;
    z-index: -1;
}

@media (max-width: 767px) {
    .about-bg-1 {
        display: none;
    }
}

.about-bg-2 {
    position: absolute;
    top: 30%;
    right: 40px;
    z-index: -1;
}

@media (max-width: 767px) {
    .about-bg-2 {
        display: none;
    }
}

.about-bg-3 {
    position: absolute;
    bottom: 20%;
    left: 30px;
    z-index: -1;
}

@media (max-width: 767px) {
    .about-bg-3 {
        display: none;
    }
}

.about-bg-4 {
    position: absolute;
    top: 20%;
    left: 40px;
    z-index: -1;
}

@media (max-width: 767px) {
    .about-bg-4 {
        display: none;
    }
}

.about-bg-5 {
    position: absolute;
    bottom: 10%;
    right: 40px;
    z-index: -1;
}

@media (max-width: 767px) {
    .about-bg-5 {
        display: none;
    }
}

.about-bg-6 {
    position: absolute;
    top: 10%;
    right: 10%;
    z-index: -1;
}

@media (max-width: 767px) {
    .about-bg-6 {
        display: none;
    }
}

.play-btn {
    height: 70px;
    width: 70px;
    border-radius: 50%;
    color: #fff;
    line-height: 70px;
    font-size: 20px;
    text-align: center;
    background: #7aff91;
    display: inline-block;
    transition: 0.2s ease;
    box-shadow: 0px 23px 43px 0px rgba(94, 254, 198, 0.3);
}

.play-btn:hover {
    color: #fff;
    font-size: 30px;
}

.product {
    position: relative;
    overflow: visible;
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center top;
}

.about-bg {
    position: absolute;
    left: 0;
    top: 0px;
    z-index: -1;
}

.form-control {
    height: 65px;
    width: 100%;
    background: #f7fafc;
}

.form-control:focus {
    border-color: #008dec;
    box-shadow: none;
}

textarea.form-control {
    height: 157px;
}

.contact-bg {
    background-color: #f3f7fb;
}

.round-icon {
    height: 50px;
    width: 50px;
    border-radius: 50%;
    font-size: 18px;
    line-height: 50px;
    display: inline-block;
    vertical-align: middle;
    text-align: center;
}

.round-icon.green {
    background: #e0fef4;
    color: #00f7a7;
}

.round-icon.blue {
    background: #e0f1ff;
    color: #008cff;
}

.round-icon.orange {
    background: #fff1e0;
    color: #ff8b00;
}

.contact {
    position: relative;
}

.contact-bg-1 {
    position: absolute;
    left: 0;
    top: 10%;
    z-index: -1;
}

@media (max-width: 767px) {
    .contact-bg-1 {
        display: none;
    }
}

.contact-bg-2 {
    position: absolute;
    top: 20%;
    right: 10%;
    z-index: -1;
}

@media (max-width: 767px) {
    .contact-bg-2 {
        display: none;
    }
}
/* ... */

